@@ -233,7 +233,9 @@ public:
 
   static double AlbumRelevance(const CStdString& strAlbumTemp1, const CStdString& strAlbum1, const CStdString& strArtistTemp1, const CStdString& strArtist1);
   static bool MakeShortenPath(CStdString StrInput, CStdString& StrOutput, int iTextMaxLength);
-
+  static float CurrentCpuUsage();
+  
 private:
   static bool m_bNetworkUp;
+  static HANDLE m_hCurrentCpuUsage;
 };
